# ArDali-Gaming

./: AGENTS.md  Cargo.toml  README.md  RELEASE.md  package.json
.cargo/: config.toml
.github/workflows/: linux-build.yml
crates/ardali-core/: Cargo.toml
crates/ardali-core/src/: error.rs  event.rs  lib.rs  model.rs
crates/ardali-storage/: Cargo.toml
crates/ardali-storage/src/: games.rs  lib.rs  sessions.rs  settings.rs
docs/: architecture-audit.md  release-verification.md  steam-account-security.md
frontend/: app.js  button-icons.js  game-settings.html  game-settings.js  index.html  styles.css
packaging/: build-appimage.sh  install-desktop-integration.sh  pacman-repo.md  verify-release.sh
packaging/aur/: PKGBUILD
packaging/linux/: ardali-gaming.desktop
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: compatibility.rs  database.rs  lib.rs  main.rs  metadata.rs  runtime.rs  steam.rs  tauri_events.rs  updates.rs
