[package]
name = "ardali-gaming"
version = "0.1.0"
description = "Linux game launcher with portable Wine, Proton, and emulator management"
authors = ["ArDali Gaming"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ardali_gaming_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri = { version = "2.11.2", features = ["protocol-asset", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
